[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "lstm"
description = "Hydrologic model based on Long Short-Term Memory algorithm"
dynamic = ["version"]
authors = [
    { name = "Jonathan Frame", email = "jmframe@ua.edu" },
    { name = "Austin Raney", email = "araney@lynker.com" },
    { name = "Scott Peckham", email = "scott.peckham@colorado.edu" },
    { name = "Jessica Garrett", email = "jessica.garrett@noaa.gov" },
    { name = "Nels Frazier", email = "nels.frazier@noaa.gov" },
]
maintainers = [
    { name = "Austin Raney", email = "araney@lynker.com" },
    { name = "Nels Frazier", email = "nels.frazier@noaa.gov" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "bmipy",
    "numpy~=1.0",
    "pandas",
    "pyyml",
    "torch",
    "typing_extensions; python_version<'3.10'",
]
# TODO: aaraney: circle back to package data

[project.optional-dependencies]
develop = ["pytest", "netcdf4"]

[tool.setuptools.dynamic]
version = { attr = "lstm._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["lstm*"]
namespaces = false

[project.urls]
Homepage = "https://github.com/NOAA-OWP/lstm"
Repository = "https://github.com/NOAA-OWP/lstm"
"Bug Tracker" = "https://github.com/NOAA-OWP/lstm/issues"
